# TIC-TAC-TOE

./: Makefile  README  README.md  UnitTestFramework.cpp  docker-compose.yml  docker_player_Dockerfile  docker_server_Dockerfile  functions.cpp  functions.h  message.h  player.cpp  server.cpp
player/: CMakeLists.txt  Dockerfile  actions.sh
server/: CMakeLists.txt  Dockerfile  actions.sh
server/src/: server.cpp
src/: functions.cpp  functions.h  message.h  player.cpp  server.cpp
